feat: переработать ИИ-агента чата
